tests/miniJava/neg/000128_mutation.MiniJava
class java { public public static void Main ( String [ ] java ) { { } } }
